--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "clean": "rimraf lib",
     "lint": "eslint src",
     "check": "npm run lint",
+    "build:example": "webpack --config example/counter/webpack.config.js",
     "build:lib": "babel src --out-dir lib",
-    "build": "npm run build:lib",
+    "build": "npm run build:lib && npm run build:example",
     "preversion": "npm run clean && npm run check",
     "version": "npm run build",
     "postversion": "git push && git push --tags",
